--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -44,9 +44,9 @@ link = "contact"
 # search
 # search module: https://github.com/gethugothemes/hugo-modules/tree/master/search
 [search]
-enable = true
+enable = false
 primary_color = "#121212"
-include_sections = ["blog"]
+include_sections = ["entrevistas", "livros", "bullying", "sobre"]
 show_image = true
 show_description = true
 show_tags = true
