--- a/config/_default/menus.pt.toml
+++ b/config/_default/menus.pt.toml
@@ -17,6 +17,11 @@ pageRef = "/livros"
 weight = 3
 
 [[main]]
+name = "Palestras"
+pageRef = "/palestras"
+weight = 4
+
+[[main]]
 name = "Entrevistas"
 pageRef = "/entrevistas"
-weight = 4
+weight = 5
