--- a/hugo.toml
+++ b/hugo.toml
@@ -1,8 +1,7 @@
 ######################## default configuration ####################
 # The base URL of your site (required). This will be prepended to all relative URLs.
-baseURL = "https://garrefa.github.io/samara/"
-# Title of your website (required).
-title = "Samy"
+baseURL = "https://www.samyazevedo.com.br/"
+title = "Maria Sâmara Azevedo"
 # Your theme name
 theme = "hugoplate"
 # Default time zone for time stamps; use any valid tz database name: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
